--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: go
-go:
-  - 1.8
+go: # use newest Go 1.x version
+  - 1.x
+git: # only build the last one
+  depth: 1
+deploy:
+  provider: script
+  script: refresh.sh
